--- a/docs/milestone2.Rmd
+++ b/docs/milestone2.Rmd
@@ -4,7 +4,6 @@ author: "Monica Li and Stanley Nam"
 date: "05/03/2020"
 output: 
   html_document:
-    keep_md: yes
     toc: true
 ---
 
@@ -12,11 +11,30 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-
 ## Introduction
+
+The wildfire in Australia is truly a tragedy. Every possible means should be taken to prevent and properly control such a painful disaster. Thanks to the cutting-edge observatory tools from NASA, we can access to [a detailed dataset] (https://www.kaggle.com/carlosparadis/fires-from-space-australia-and-new-zeland) which provides a screenshot in the temporal development of this event. An analysis of the actual data and visualizing them can serve as a means to set up strategies for extinguishing and preventing a widespread fire like this.
 
 ## Exploring the dataset
  
+The [dataset](https://www.kaggle.com/carlosparadis/fires-from-space-australia-and-new-zeland) we are using was obtained from Kaggle, uploaded by Carlos Paradis. The raw data from observation of the wildfire by two NASA Satellite Instruments were contained in the dataset. Out of the four .csv files they provided, we are limiting our scope to 'fire_archive_M6_96619.csv' only because it is the most reliable file with raw observatory data corrected by other data sources.
+
+In this file, each row represents an observation of fire in Australia and New Zealand. Columns are for geographic information (latitude and longitude), the fire intensity (brightness, bright_t31, frp), specifications of the observation satellite instrument (scan, track, satellite, instrument, version), quality/confidence of the observation (confidence) details on the observation time (acq_date, acq_time) and other factors (daylight).
+
+In the next subsections, we explored the dataset with plotting Correllogram and geometric diagram
+
+### Correllogram
+From the correllogram below, we could see that there are some correlation between brightness and frp, scan and track. The color scheme in correllogram shows all positive correlations as blue, and all negative correlations as red.
+
+<center>
+![Correllogram](../images/correllgram.png)
+</center>
+
+### Geometric with longitue and latitude
+From the scatter plot map below, we could get a visual concept about the overall fire locations according to brightness and rediation power. The larger point on frp means higher fire rediation power, and a lighter point color, indicates a higher brightness of the fire.
+
+![GeoGram](../images/geogram.png)
+
 ## Methods
 TBD in next week for linear regression
 
