--- a/docs/finalReport.Rmd
+++ b/docs/finalReport.Rmd
@@ -5,6 +5,9 @@ date: "05/03/2020"
 output: 
   html_document:
     toc: true
+  pdf_document:
+    toc: true
+      
 ---
 
 ```{r setup, include=FALSE}
